--- a/Morgan/Pages/HomePage.xaml
+++ b/Morgan/Pages/HomePage.xaml
@@ -1,4 +1,4 @@
-﻿<local:BasePage x:Class="Morgan.BaseFormPage"
+﻿<local:BasePage x:Class="Morgan.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Morgan"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="520"
-      Title="BaseFormPage">
+      Title="HomePage">
 
     <Grid>
 
