--- a/Morgan/Pages/Home/ViewFilePage.xaml
+++ b/Morgan/Pages/Home/ViewFilePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Morgan.FileStructurePage"
+﻿<local:BasePage x:Class="Morgan.ViewFilePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Morgan"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800"
-      Title="FileStructurePage">
+      Title="ViewFilePage">
 
     <Grid>
 
@@ -39,4 +39,4 @@
 
     </Grid>
     
-</Page>
+</local:BasePage>
