--- a/Morgan/Controls/SideMenuControl.xaml
+++ b/Morgan/Controls/SideMenuControl.xaml
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:Morgan"
              mc:Ignorable="d" 
              d:DesignHeight="300"
-             Width="60">
+             Width="60"
+             local:AnimationAttachedProperty.AnimateInFromRight="True">
 
     <!-- Side Menu Control -->
     <Grid>
