--- a/Morgan/Controls/SideMenuControl.xaml
+++ b/Morgan/Controls/SideMenuControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300"
              Width="60"
-             local:AnimationAttachedProperty.AnimateInFromRight="True"
+             local:AnimationAttachedProperty.AnimateInFromLeft="True"
              d:DataContext="{x:Static local:SideMenuControlDesignModel.Instance}">
 
     <!-- Side Menu Control -->
