--- a/Morgan/Styles/Colors.xaml
+++ b/Morgan/Styles/Colors.xaml
@@ -15,6 +15,9 @@
     <Color x:Key="ForegroundLight">#f4f4f4</Color>
     <SolidColorBrush x:Key="ForegroundLightBrush" Color="{StaticResource ForegroundLight}"/>
 
+    <Color x:Key="ForegroundDark">#9e9e9e</Color>
+    <SolidColorBrush x:Key="ForegroundDarkBrush" Color="{StaticResource ForegroundDark}"/>
+
     <!-- PRIMARY COLORS -->
     
     <Color x:Key="ColorPrimary">#fb5154</Color>
