--- a/Morgan/Controls/ButtonPanelControl.xaml
+++ b/Morgan/Controls/ButtonPanelControl.xaml
@@ -13,10 +13,8 @@
             <Grid>
 
                 <Border Background="{StaticResource ColorPrimaryBrush}"
+                        Margin="0 0 0 0"
                         CornerRadius="2"/>
-
-                <Border Background="{StaticResource ColorPrimaryBrush}"
-                        Margin="0 0 10 0"/>
 
                 <ContentPresenter Margin="20"/>
 
