--- a/Morgan/Styles/Buttons.xaml
+++ b/Morgan/Styles/Buttons.xaml
@@ -95,6 +95,63 @@
 
     </Style>
 
+    <!-- Default Secondary Button -->
+    <Style TargetType="Button" x:Key="SecondaryButton">
+        <Setter Property="Background" Value="{StaticResource ForegroundLightBrush}"/>
+        <Setter Property="Foreground" Value="#000"/>
+        <Setter Property="Padding" Value="12,8"/>
+        <Setter Property="BorderThickness" Value="1 1 1 .7"/>
+        <Setter Property="BorderBrush" Value="{StaticResource ForegroundLightBrush}"/>
+        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="FontFamily" Value="{StaticResource CalibriLight}"/>
+        <Setter Property="FontWeight" Value="Light"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="local:ButtonAttachedProperties.IsBusy" Value="False"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border CornerRadius="1" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true">
+                        <Grid x:Name="grid">
+                            <!-- Button Content -->
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" 
+                                              RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                              Visibility="{Binding (local:ButtonAttachedProperties.IsBusy), RelativeSource={RelativeSource TemplatedParent}, 
+                                                Converter={local:BoolToVisibilityInvertConverter}}"/>
+
+                            <!-- Placeholder to show when the button is Busy -->
+                            <TextBlock Style="{StaticResource SpinnerText}"
+                                       Visibility="{Binding (local:ButtonAttachedProperties.IsBusy), RelativeSource={RelativeSource TemplatedParent}, Converter={local:BoolToVisibilityConverter}}"/>
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="local:ButtonAttachedProperties.IsSelected" Value="True">
+                            <Setter Property="Background" TargetName="grid" Value="{StaticResource ColorPrimaryBrush}"/>
+                        </Trigger>
+                        <EventTrigger RoutedEvent="MouseEnter">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation To="{StaticResource BackgroundVeryDark}" Duration="0:0:0.2" Storyboard.TargetProperty="Background.Color"/>
+                                    <ColorAnimation To="{StaticResource BackgroundVeryDark}" Duration="0:0:0.2" Storyboard.TargetProperty="BorderBrush.Color"/>
+                                    <ColorAnimation To="#fff" Duration="0:0:0.2" Storyboard.TargetProperty="Foreground.Color"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="MouseLeave">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation To="{StaticResource ForegroundLight}" Duration="0:0:0.2" Storyboard.TargetProperty="Background.Color"/>
+                                    <ColorAnimation To="{StaticResource ForegroundLight}" Duration="0:0:0.2" Storyboard.TargetProperty="BorderBrush.Color"/>
+                                    <ColorAnimation To="#000" Duration="0:0:0.2" Storyboard.TargetProperty="Foreground.Color"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+    </Style>
+
     <!-- Tile Button -->
     <Style TargetType="Button" x:Key="TileButton">
         <Setter Property="Background" Value="Transparent"/>
