Added a base page that hosts multiple pages related to HomePage
Created a new base page for hosting sub versions of Home. This was necessary for handling the state of the Home tab, as Home contains mutiple pages that can be navigated.

--- a/Morgan/Controls/SideMenuControl.xaml
+++ b/Morgan/Controls/SideMenuControl.xaml
@@ -29,7 +29,7 @@
                 <Button Style="{StaticResource TileButton}"
                         Content=""
                         local:ButtonAttachedProperties.IsSelected="{Binding HomeIsSelected}"
-                        Command="{Binding NavigateToHomeCommand}"/>
+                        Command="{Binding NavigateToBaseHomeCommand}"/>
 
                 <Button Style="{StaticResource TileButton}"
                         Content=""
