--- a/Morgan/Pages/Home/HomePage.xaml
+++ b/Morgan/Pages/Home/HomePage.xaml
@@ -50,6 +50,7 @@
 
         <!-- Button Panel -->
         <local:ButtonPanelControl VerticalAlignment="Bottom"
+            Visibility="{Binding HasLocation, Converter={local:BoolToVisibilityConverter}}"
             local:SlideFromBottomProperty.SlideInOutFromBottom="{Binding HasLocation}">
 
             <Grid>
