--- a/Morgan/Pages/Home/ViewFilePage.xaml
+++ b/Morgan/Pages/Home/ViewFilePage.xaml
@@ -19,18 +19,43 @@
 
             <!-- Field 1 -->
             <StackPanel Orientation="Horizontal" Margin="0 2.5 0 2.5">
-                <TextBlock Text="F I L E S    S C A N N E D" Margin="0 0 5 0" VerticalAlignment="Center"/>
-                <TextBlock Text="{Binding MusicFileCount, FallbackValue=⓲}" Margin="5 0 0 0" FontSize="30"/>
+                <TextBlock Text="F I L E S    S C A N N E D" Margin="0 0 5 0" VerticalAlignment="Center" Width="160"/>
+                <TextBlock Text="{Binding MusicFileCount, FallbackValue=0}" FontSize="30"/>
             </StackPanel>
 
             <!-- Field 2 -->
             <StackPanel Orientation="Horizontal" Margin="0 2.5 0 2.5">
-                <TextBlock Text="L O C A T I O N S    S C A N N E D" Margin="0 0 5 0" VerticalAlignment="Center"/>
-                <TextBlock Text="{Binding LocationCount, FallbackValue=❻}" Margin="5 0 0 0" FontSize="30"/>
+                <TextBlock Text="L O C A T I O N S    S C A N N E D" Margin="0 0 5 0" VerticalAlignment="Center" Width="160"/>
+                <TextBlock Text="{Binding LocationCount, FallbackValue=0}" FontSize="30"/>
             </StackPanel>
 
-            <!-- Edit tags buttton -->
-            <Button Content=" E D I T    T A G S" HorizontalAlignment="Left" Margin="0 10"/>
+            
+            <!-- Header 2 -->
+            <TextBlock Text="Metadata" FontSize="20" Margin="0 20 0 10"/>
+
+            <!-- Field 1 -->
+            <StackPanel Orientation="Horizontal" Margin="0 2.5 0 2.5">
+                <TextBlock Text="G E N R E S" Margin="0 0 5 0" VerticalAlignment="Center" Width="60"/>
+                <TextBlock Text="{Binding GenreCount, FallbackValue=0}" Margin="5 0 0 0" FontSize="30"/>
+            </StackPanel>
+
+            <!-- Field 2 -->
+            <StackPanel Orientation="Horizontal" Margin="0 2.5 0 2.5">
+                <TextBlock Text="A R T I S T S" Margin="0 0 5 0" VerticalAlignment="Center" Width="60"/>
+                <TextBlock Text="{Binding ArtistCount, FallbackValue=0}" Margin="5 0 0 0" FontSize="30"/>
+            </StackPanel>
+
+            <!-- Field 1 -->
+            <StackPanel Orientation="Horizontal" Margin="0 2.5 0 2.5">
+                <TextBlock Text="A L B U M S" Margin="0 0 5 0" VerticalAlignment="Center" Width="60"/>
+                <TextBlock Text="{Binding AlbumCount, FallbackValue=0}" Margin="5 0 0 0" FontSize="30"/>
+            </StackPanel>
+
+            <!-- Field 2 -->
+            <StackPanel Orientation="Horizontal" Margin="0 2.5 0 2.5">
+                <TextBlock Text="T I T L E S" Margin="0 0 5 0" VerticalAlignment="Center" Width="60"/>
+                <TextBlock Text="{Binding TitleCount, FallbackValue=0}" Margin="5 0 0 0" FontSize="30"/>
+            </StackPanel>
 
         </StackPanel>
 
